--- a/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
@@ -30,6 +30,8 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:background="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_title" />
