--- a/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
@@ -5,7 +5,9 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Navigation">
+    tools:context=".Navigation"
+    android:background="@drawable/lightorange">
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -17,4 +19,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
+
+    <TextView
+
+        android:id="@+id/result_textview"
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
+        android:layout_centerVertical="true"
+        android:fontFamily="@font/amiko_semibold"
+        android:freezesText="true"
+        android:gravity="center"
+        android:text="Lawrence Livermore National Laboratory"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="28dp" />
 </android.support.constraint.ConstraintLayout>
