--- a/BasicStructure1/app/src/main/res/layout/activity_qr.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_qr.xml
@@ -5,29 +5,38 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-tools:context="com.example.david.alpha.QRActivity">
+tools:context="com.example.david.alpha.QRActivity"
+android:background="@drawable/lightorange" >
 
-<TextView
-    android:id="@+id/result_textview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/no_barcode_captured"
-    android:textSize="22sp"
-    android:freezesText="true"
-    android:layout_centerVertical="true"
-    android:gravity="center"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    app:layout_constraintBottom_toTopOf="@id/scan_barcode_button"/>
+    <TextView
 
-<Button
-    android:id="@+id/scan_barcode_button"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/scan_barcode_button"
-    android:layout_below="@id/result_textview"
-    android:background="@color/colorAccent"
-    android:textColor="@color/colorWhite"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintVertical_bias="0.7"/>
+
+        android:id="@+id/result_textview"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_centerVertical="true"
+        android:fontFamily="@font/amiko_semibold"
+        android:freezesText="true"
+        android:gravity="center"
+        android:text="@string/no_barcode_captured"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="164dp" />
+
+    <Button
+        android:id="@+id/scan_barcode_button"
+        android:layout_width="353dp"
+        android:layout_height="74dp"
+        android:layout_below="@id/result_textview"
+        android:background="@drawable/rounded_corner_button"
+        android:fontFamily="@font/amiko_semibold"
+        android:text="@string/scan_barcode_button"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.962"
+        tools:layout_editor_absoluteX="16dp" />
 </android.support.constraint.ConstraintLayout>
