--- a/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.david.alpha.ActiveHoursActivity">
+    tools:context="com.example.david.alpha.ActiveHoursActivity"
+    android:background="@drawable/lightorange">
 
     <TextView
         android:id="@+id/score_title"
@@ -17,6 +18,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="Score Breakdown"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="44sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +31,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/amiko_semibold"
+        android:gravity="center"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="48dp"
-        android:textAlignment="center"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_title" />
@@ -45,8 +48,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/amiko_semibold"
         android:text="Total Score"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/score_totalScoreDisplay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -54,22 +60,28 @@
     <TextView
         android:id="@+id/score_movementScoreTitle"
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="34dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
+        android:fontFamily="@font/amiko_semibold"
         android:text="Active Minutes"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_totalScoreDisplay" />
 
     <TextView
         android:id="@+id/score_QRScoreTitle"
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="34dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/amiko_semibold"
         android:text="QR Code Points"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_totalScoreDisplay" />
 
@@ -98,15 +110,6 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_QRScoreTitle" />
-
-    <TextView
-        android:id="@+id/score_sensorRegistered"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/score_totalScoreDisplay"
-        app:layout_constraintTop_toBottomOf="@+id/score_totalScoreDisplay" />
 
 
 </android.support.constraint.ConstraintLayout>
