--- a/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
@@ -111,5 +111,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score_QRScoreTitle" />
 
+    <TextView
+        android:id="@+id/score_sensorRegistered"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/score_totalScoreDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/score_totalScoreDisplay" />
+
 
 </android.support.constraint.ConstraintLayout>
