QR Code Points working, active detector hours working slightly better

--- a/BasicStructure1/app/src/main/res/layout/activity_leaderboard.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_leaderboard.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.david.alpha.LeaderboardActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/lightorange">
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -43,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="18sp"
-                android:text="Retrieving leaderboard..." />
+                android:text="Retrieving top 5 scores..." />
 
             <TextView
                 android:id="@+id/score0"
