--- a/BasicStructure1/app/src/main/res/layout/activity_qr.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_qr.xml
@@ -30,13 +30,16 @@ android:background="@drawable/lightorange" >
         android:layout_width="353dp"
         android:layout_height="74dp"
         android:layout_below="@id/result_textview"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/rounded_corner_button"
         android:fontFamily="@font/amiko_semibold"
         android:text="@string/scan_barcode_button"
         android:textColor="@color/colorWhite"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.962"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintVertical_bias="0.962" />
 </android.support.constraint.ConstraintLayout>
