--- a/res/layout/activity_qr.xml
+++ b/res/layout/activity_qr.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 tools:context="com.example.david.alpha.QRActivity"
-android:background="#FDF0D5" >
+android:background="#FDF0D" >
 
     <TextView
 
@@ -15,25 +15,21 @@ android:background="#FDF0D5" >
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="168dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/amiko_semibold"
         android:freezesText="true"
         android:gravity="center"
         android:text="@string/no_barcode_captured"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/scan_barcode_button"
-        android:layout_width="353dp"
-        android:layout_height="74dp"
+        android:layout_width="332dp"
+        android:layout_height="72dp"
         android:layout_below="@id/result_textview"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -44,7 +40,8 @@ android:background="#FDF0D5" >
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.962" />
+        app:layout_constraintVertical_bias="0.931" />
 </android.support.constraint.ConstraintLayout>
