--- a/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
@@ -78,7 +78,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/amiko_semibold"
-        android:text="QR Code Points"
+        android:text="Puzzle Points"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
