--- a/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
@@ -24,15 +24,21 @@
 
         android:id="@+id/result_textview"
         android:layout_width="match_parent"
-        android:layout_height="92dp"
+        android:layout_height="323dp"
         android:layout_centerVertical="true"
-        android:fontFamily="@font/amiko_semibold"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="serif"
         android:freezesText="true"
         android:gravity="center"
-        android:text="Lawrence Livermore National Laboratory"
+        android:text="\u03C4"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="28dp" />
+        android:textSize="200dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
