--- a/BasicStructure1/app/src/main/res/layout/activity_puzzle_input.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_puzzle_input.xml
@@ -50,10 +50,12 @@
 
     <TextView
         android:id="@+id/input_serverinfo"
-        android:layout_width="188dp"
+        android:layout_width="265dp"
         android:layout_height="88dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 </android.support.constraint.ConstraintLayout>
