--- a/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_navigation.xml
@@ -33,9 +33,9 @@
         android:fontFamily="serif"
         android:freezesText="true"
         android:gravity="center"
-        android:text="\u03C4"
+        android:text="@string/navigation_splash"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="200dp"
+        android:textSize="100dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
