--- a/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
+++ b/BasicStructure1/app/src/main/res/layout/activity_scoring.xml
@@ -64,7 +64,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/amiko_semibold"
-        android:text="Active Minutes"
+        android:text="Activity Points"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
