--- a/App Components/TauApp/res/layout/barcode_capture.xml
+++ b/App Components/TauApp/res/layout/barcode_capture.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-    <com.example.david.alpha.camera.CameraSourcePreview
+    <com.hmc.tau.alpha.camera.CameraSourcePreview
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    </com.example.david.alpha.camera.CameraSourcePreview>
+    </com.hmc.tau.alpha.camera.CameraSourcePreview>
 </LinearLayout>
